--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@ Options +FollowSymLinks -MultiViews
 RewriteEngine On
 RewriteBase /
 
-RewriteCond %{HTTPS}::%{HTTP_HOST} ^off::(?:www\.)?(.+)$
-RewriteRule ^ https://www.%1%{REQUEST_URI} [NE,L,R]
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.dreacotgroup.com/$1 [R,L]
 
 RewriteCond %{REQUEST_METHOD} !POST [NC]
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
